<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.home.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPic2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_picture_to_text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnText2Pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_to_picture" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_picture_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_picture_library" />

    </LinearLayout>
</LinearLayout>