<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.TextToPicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/paste_code_hint"
                app:endIconDrawable="@drawable/ic_paste"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddToList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/add_to_list"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_baseline_add_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?attr/dividerHorizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/or"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?attr/dividerHorizontal" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddFromMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_add_from_messages" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/encoding">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actvEncoding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_anim_fall_down"
                android:scrollbarStyle="outsideInset"
                app:fastScrollEnabled="true"
                app:fastScrollHorizontalThumbDrawable="@drawable/thumb"
                app:fastScrollHorizontalTrackDrawable="@drawable/track"
                app:fastScrollVerticalThumbDrawable="@drawable/thumb"
                app:fastScrollVerticalTrackDrawable="@drawable/track"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabTextToPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:text="@string/btn_text_to_picture"
        app:icon="@drawable/ic_baseline_text_fields_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>